test_regress/t/t_wrapper_reuse_context_bad.out
%Error: /svaha/wsnyder/SandBox/homecvs/v4/verilator/include/verilated.cpp:2672: Adding model when time is non-zero. ... Suggest check time(), or for restarting model use a new VerilatedContext
Aborting...
